--- a/hugo.toml
+++ b/hugo.toml
@@ -119,14 +119,14 @@ theme = "hugo-blog-awesome"
   background_color = "#fff" # by default depend on "params.defaultColor" for "light" or "auto" will be set to "#fff" for dark will be "#131418" (color of dark mode background)
   display = "standalone"
 
-# Allow to override webmanifest options
-[Languages.de-de.params.webmanifest]
-  name = "sitename" # will use "params.sitename" or "title" by default
-  short_name = "sitename" # same as name
-  start_url = "/" # will use homepage url by default
-  theme_color = "#434648" # default is "#434648" (base color of text). Also will override html `<meta name="theme-color" />`
-  background_color = "#fff" # by default depend on "params.defaultColor" for "light" or "auto" will be set to "#fff" for dark will be "#131418" (color of dark mode background)
-  display = "standalone"
+# # Allow to override webmanifest options
+# [Languages.de-de.params.webmanifest]
+#   name = "sitename" # will use "params.sitename" or "title" by default
+#   short_name = "sitename" # same as name
+#   start_url = "/" # will use homepage url by default
+#   theme_color = "#434648" # default is "#434648" (base color of text). Also will override html `<meta name="theme-color" />`
+#   background_color = "#fff" # by default depend on "params.defaultColor" for "light" or "auto" will be set to "#fff" for dark will be "#131418" (color of dark mode background)
+#   display = "standalone"
 
 ###################################################################
 
