--- a/hugo.toml
+++ b/hugo.toml
@@ -136,11 +136,11 @@ theme = "hugo-blog-awesome"
 
 [[params.socialIcons]]
 name = "github"
-url = "https://github.com/hugo-sid"
+url = "https://github.com/markram1729"
 
 [[params.socialIcons]]
 name = "twitter"
-url = "https://twitter.com"
+url = "https://x.com/ram_rishik"
 
 [[params.socialIcons]]
 name = "Rss"
